--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@
 @tailwind utilities;
 
 
-button{
-    @apply bg-teal-950 text-slate-300 rounded-3xl border-teal-950 py-2 px-6 hover:bg-transparent hover:text-teal-950 duration-300 
+.small_button{
+    @apply bg-black text-white rounded-sm text-xl px-8 leading-8 hover:opacity-90 duration-300 
+}
+.primary_button{@apply bg-teal-950 text-slate-300 rounded-3xl border-teal-950 py-2 px-6 hover:bg-transparent hover:text-teal-950 duration-300
 }
 body{
-    @apply box-border overflow-x-hidden w-screen font-poppin m-0
+    @apply box-border overflow-x-hidden w-screen font-poppin m-0 p-0
 
     }
     .bg{
